# keydo

./: .gitignore  Cargo.toml  README.md  keydo.yaml  package-lock.json  package.json  prototype.py  pyproject.toml
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  state.rs
src/pages/: folder.tsx  index.tsx
src/pks_keydo/: __init__.py  __main__.py  keydo.py
